3-tier application deployment/k8s/backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: <account-id>.dkr.ecr.ap-south-1.amazonaws.com/backend:latest
        ports:
        - containerPort: 5000
