3-tier application deployment/k8s/frontenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: <account-id>.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest
        ports:
        - containerPort: 80
